# JInk

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: Popup.tsx  Settings.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  inject.rs  lib.rs  main.rs
src/components/: Combobox.tsx  IconButton.tsx  KeyCapture.tsx  MicTest.tsx  Switch.tsx
src/lib/: ai.ts  languages.ts  settings.ts  shortcuts.ts  useUndo.ts  voice.ts
