[package]
name = "easyinput"
version = "0.1.0"
description = "Quick input popup with translate, AI enhance and voice"
authors = ["nhatcoi"]
edition = "2021"

[lib]
name = "easyinput_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1"

# enigo needs libxdo on Linux; there we paste via the xdotool CLI instead.
[target.'cfg(not(target_os = "linux"))'.dependencies]
enigo = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
